[gd_scene load_steps=15 format=3 uid="uid://bv8c32ujaw355"]

[ext_resource type="Theme" uid="uid://byhrlwtow3f1m" path="res://Assets/Themes/main_menu.tres" id="1_o53sk"]
[ext_resource type="Script" uid="uid://cps6uh5a6ykpg" path="res://Scripts/main_menu.gd" id="2_tik7u"]
[ext_resource type="Texture2D" uid="uid://d3fotiiji7q5h" path="res://Assets/Screens/MainMenu/Main_StartMenu_Screen01.png" id="3_q0nr5"]
[ext_resource type="Script" uid="uid://b47m7moovdv8j" path="res://Scenes/UI/MainMenu/hover.gd" id="3_tik7u"]
[ext_resource type="Texture2D" uid="uid://bstlf1yckqaas" path="res://Assets/Screens/MainMenu/Main_Menu_Logo.png" id="3_xwepa"]
[ext_resource type="Texture2D" uid="uid://bm3wa0hdcrwtt" path="res://Assets/Themes/Main_Menu_Button.png" id="4_bw8va"]
[ext_resource type="Texture2D" uid="uid://cxbyxd8q4mgxo" path="res://Assets/Screens/MainMenu/Main_StartMenu_Screen03.png" id="4_optwy"]
[ext_resource type="AudioStream" uid="uid://cvr4xitf2h0wx" path="res://Assets/Sounds/Menu_Score.wav" id="5_608ul"]
[ext_resource type="Script" uid="uid://brd1w68p0nsry" path="res://Scripts/foreground.gd" id="5_cdm4t"]
[ext_resource type="Texture2D" uid="uid://csnspgekv4t6d" path="res://Assets/Screens/MainMenu/Main_StartMenu_Screen02.png" id="6_eu4hu"]
[ext_resource type="AudioStream" uid="uid://dwrp3n1lrknrp" path="res://Assets/Sounds/Menu_Button_Click.mp3" id="6_u8afo"]
[ext_resource type="Texture2D" uid="uid://b22317jhx5rgi" path="res://Assets/Screens/MainMenu/Main_StartMenu_Screen04.png" id="7_m5ruw"]
[ext_resource type="Script" uid="uid://dqflcv3dqjpf" path="res://Scripts/clouds.gd" id="7_optwy"]
[ext_resource type="Script" uid="uid://c63gsbv7usw1b" path="res://Scripts/gurt.gd" id="9_cdm4t"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o53sk")
script = ExtResource("2_tik7u")

[node name="Node2D" type="Node2D" parent="."]
texture_filter = 1
position = Vector2(-128, -108)

[node name="Background" type="Sprite2D" parent="Node2D"]
texture_filter = 1
position = Vector2(1058, 622)
texture = ExtResource("3_q0nr5")

[node name="Foreground" type="Sprite2D" parent="Node2D"]
texture_filter = 1
position = Vector2(1058, 622)
texture = ExtResource("4_optwy")
centered = false
script = ExtResource("5_cdm4t")
move_force = 2

[node name="Clouds" type="Sprite2D" parent="Node2D"]
texture_filter = 1
position = Vector2(1058, 622)
texture = ExtResource("6_eu4hu")
centered = false
script = ExtResource("7_optwy")

[node name="Gurt" type="Sprite2D" parent="Node2D"]
texture_filter = 1
position = Vector2(2085, 1992)
texture = ExtResource("7_m5ruw")
centered = false
script = ExtResource("9_cdm4t")
move_force = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_xwepa")

[node name="Buttons" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
script = ExtResource("3_tik7u")

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -820.0
offset_top = -605.0
offset_right = -181.0
offset_bottom = -383.0
grow_horizontal = 2
scale = Vector2(0.9080293, 0.9080293)
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Credits")
focus_next = NodePath("../Credits")
focus_previous = NodePath("../Quit")
theme_override_font_sizes/font_size = 90
text = "PLAY"
icon = ExtResource("4_bw8va")
flat = true
icon_alignment = 1

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 0
offset_left = -820.0
offset_top = -404.0
offset_right = -181.0
offset_bottom = -182.0
scale = Vector2(0.9080293, 0.9080293)
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
theme_override_font_sizes/font_size = 90
text = "CREDITS"
icon = ExtResource("4_bw8va")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 0
offset_left = -820.0
offset_top = -210.0
offset_right = -181.0
offset_bottom = 12.0
scale = Vector2(0.9080293, 0.9080293)
focus_neighbor_top = NodePath("../Credits")
focus_neighbor_bottom = NodePath("../Play")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Credits")
theme_override_font_sizes/font_size = 90
text = "QUIT"
icon = ExtResource("4_bw8va")
flat = true
icon_alignment = 1

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_608ul")
bus = &"Music"

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_u8afo")
bus = &"SFX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
